--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "illuminate/support": "^6.0|^7.0",
         "fruitcake/laravel-cors": "^1.0",
         "laravel/sanctum": "^2.0",
